Fixed pfx loading issue on Azure

--- a/SimIssuer/Web.config
+++ b/SimIssuer/Web.config
@@ -13,10 +13,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
       <staticContent>
         <mimeMap fileExtension=".cer" mimeType="application/octet-stream" />
+        <mimeMap fileExtension=".json" mimeType="application/json" />
       </staticContent>
   </system.webServer>
   <runtime>
